alterações de conteudo e display

--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -16,7 +16,7 @@
       <div class="form-row">
 
         <div class="col-3 col-md-2 mb-3 form-group pl-3">
-          <label>Nº Cliente</label>
+          <label>Cliente</label>
           <input type="number" class="form-control" name="id" [(ngModel)]="lead.id" readonly>
         </div>
 
@@ -34,7 +34,7 @@
           <div class="alert alert-danger" *ngIf="!idade.valid && idade.touched">Indique a sua idade.</div>
         </div>
 
-        <div class="col-5 col-md-2 mb-3 form-group pl-3">
+        <div class="col-9 col-md-2 mb-3 form-group pl-3">
           <label for="validaTelefone">Telefone</label>
           <input type="tel" class="form-control" [class.ng-touched]="showAlert" id="validaTelefone" name="telefone"
             [(ngModel)]="lead.telefone" #telefone="ngModel" required minlength="9" [readonly]="readOnly">
@@ -43,7 +43,7 @@
           </div>
         </div>
 
-        <div class="col-4 col-md-2 mb-3 form-group pl-3">
+        <div class="col-12 col-md-2 mb-3 form-group pl-3">
           <label for="validaNIF">NIF</label>
           <input type="number" class="form-control" [class.ng-touched]="showAlert" id="validaNIF" [(ngModel)]="lead.nif"
             name="nif" #nif="ngModel" required [readonly]="readOnly">
@@ -64,7 +64,7 @@
         </div>
 
 
-        <div class="col-5 col-md-3 mb-3 form-group pl-3">
+        <div class="col-9 col-md-3 mb-3 form-group pl-3">
           <label for="validationEstadoCivil">Estado civil</label>
           <select class="form-control" [class.ng-touched]="showAlert" id="validationEstadoCivil"
             [(ngModel)]="lead.estadocivil" name="estadocivil" #estadocivil="ngModel" required [disabled]="readOnly">
@@ -75,13 +75,13 @@
           </div>
         </div>
 
-        <div class="col-2 col-md-1 mb-3 form-group pl-3">
+        <div class="col-3 col-md-1 mb-3 form-group pl-3">
           <label for="validafilhos">Filhos</label>
           <input type="number" class="form-control" id="validafilhos" name="filhos" [(ngModel)]="lead.filhos"
             [readonly]="readOnly">
         </div>
 
-        <div class="col-5 col-md-3 mb-3 form-group pl-3">
+        <div class="col-12 col-md-3 mb-3 form-group pl-3">
           <label for="validationIRS">IRS</label>
           <select class="form-control" [class.ng-touched]="showAlert" id="validationIRS" [(ngModel)]="lead.irs"
             name="irs" #irs="ngModel" required [disabled]="readOnly">
@@ -94,11 +94,9 @@
             Obrigatório
           </div>
         </div>
-      </div>
 
-      <div class="form-row">
 
-        <div class="col-6 col-md-4 mb-3 form-group pl-3">
+        <div class="col-12 col-md-4 mb-3 form-group pl-3">
           <label for="validationSitProf">Situação Profissional</label>
           <select class="form-control" [class.ng-touched]="showAlert" id="validationSitProf"
             [(ngModel)]="lead.tipocontrato" name="tipocontrato" #tipocontrato="ngModel" required [disabled]="readOnly">
@@ -109,7 +107,7 @@
           </div>
         </div>
 
-        <div class="col-3 col-md-2 mb-3 form-group pl-3">
+        <div class="col-6 col-md-2 mb-3 form-group pl-3">
           <label for="validationVenc">Vencimento</label>
           <input type="number" class="form-control" [class.ng-touched]="showAlert" id="validationVenc"
             [(ngModel)]="lead.vencimento" name="vencimento" #vencimento="ngModel" required min="100"
@@ -119,7 +117,7 @@
           </div>
         </div>
 
-        <div class="col-3 col-md-2 mb-3 form-group pl-3">
+        <div class="col-6 col-md-2 mb-3 form-group pl-3">
           <label for="validationDesde">Desde</label>
           <input type="number" class="form-control" [class.ng-touched]="showAlert" id="validationDesde"
             placeholder="ano" [(ngModel)]="lead.anoinicio" name="anoinicio" #anoinicio="ngModel" required min="1900"
@@ -131,7 +129,7 @@
       </div>
 
       <div class="form-row">
-        <div class="col-6 col-md-3 mb-3 form-group pl-3 ">
+        <div class="col-12 col-md-3 mb-3 form-group pl-3 ">
           <label for="validationHab">Habitação</label>
           <select class="form-control" [class.ng-touched]="showAlert" [(ngModel)]="lead.tipohabitacao"
             name="tipohabitacao" #hab="ngModel" id="validationHab" required [disabled]="readOnly">
@@ -142,7 +140,7 @@
           </div>
         </div>
 
-        <div class="col-3 col-md-2 mb-3 form-group pl-3">
+        <div class="col-6 col-md-2 mb-3 form-group pl-3">
           <label for="validationDesdeH">Desde</label>
           <input type="number" class="form-control" [class.ng-touched]="showAlert" id="validationDesdeH"
             placeholder="ano" name="anoiniciohabitacao" [(ngModel)]="lead.anoiniciohabitacao" #anohabitacao="ngModel"
@@ -152,7 +150,7 @@
           </div>
         </div>
 
-        <div class="col-3 col-md-2 mb-3 form-group pl-3">
+        <div class="col-6 col-md-2 mb-3 form-group pl-3">
           <label for="validationValor">Valor</label>
           <input type="number" class="form-control" id="validationValor" name="valorhabitacao"
             [(ngModel)]="lead.valorhabitacao" #valorhabitacao="ngModel" [class.ng-touched]="showAlert"
@@ -193,31 +191,14 @@
             <option value="1">SIM</option>
             <option value="0">NÃO</option>
           </select>
-    <!--       <div class="alert alert-danger" *ngIf="!segProp.valid">
-              Obrigatório
-            </div> -->
+
         </div>
       </div>
 
       <!-- Formulario  Segundo proponente -->
       <div class="form-row" *ngIf="lead.segundoproponente==1">
-        <!--             <div class="col-xs-12 col-md-4 mb-3 form-group pl-3">
-              <label for="validationNome2">Nome</label>
-              <input type="text" class="form-control" [class.ng-touched]="showAlert" id="validationNome2" 
-               name="nome2" [(ngModel)]="lead.nome2" #nome2="ngModel" [required]="prop" [readonly]="readOnly">
-              <div class="alert alert-danger" *ngIf="!nome2.valid && nome2.touched">
-                Obrigatório
-              </div>
-            </div> -->
-        <!--             <div class="col-3 col-md-1 mb-3 form-group pl-3">
-              <label for="validationIdade2">Idade</label>
-              <input type="number" class="form-control" [class.ng-touched]="showAlert" id="validationIdade2"
-               name="idade2" [(ngModel)]="lead.idade2" #idade2="ngModel" [required]="prop" [readonly]="readOnly">
-              <div class="alert alert-danger" *ngIf="!idade2.valid && idade2.touched">
-                Obrigatório
-              </div>
-            </div> -->
-        <div class="col-5 col-md-2 mb-3 form-group pl-3">
+
+        <div class="col-12 col-md-2 mb-3 form-group pl-3">
           <label for="validaTelefone2">Telefone</label>
           <input type="tel" class="form-control" id="validaTelefone2" [class.ng-touched]="showAlert" name="telefone2"
             [(ngModel)]="lead.telefone2" #telefone2="ngModel" [required]="segProp" minlength="9" [readonly]="readOnly">
@@ -225,14 +206,7 @@
             Obrigatório
           </div>
         </div>
-        <!--             <div class="col-4 col-md-2 mb-3 form-group pl-3">
-              <label for="validaNIF2">NIF</label>
-              <input type="tel" class="form-control" [class.ng-touched]="showAlert" id="validaNIF2" name="nif2" [(ngModel)]="lead.nif2" #nif2="ngModel"
-                [required]="prop" minlength="9" [readonly]="readOnly">
-              <div class="alert alert-danger" *ngIf="!nif2.valid && nif2.touched">
-                Obrigatório
-              </div>
-            </div> -->
+
         <div class="col-12 col-md-4 mb-3 form-group pl-3">
           <label for="validationRelacao">Relação com Proponente</label>
           <select class="form-control" [class.ng-touched]="showAlert" name="relacaofamiliar"
@@ -244,7 +218,7 @@
             Obrigatório
           </div>
         </div>
-        <div class="col-6 col-md-4 mb-3 form-group pl-3">
+        <div class="col-12 col-md-4 mb-3 form-group pl-3">
           <label for="validationProfissao2">Situação Profissional</label>
           <select class="form-control" [class.ng-touched]="showAlert" [(ngModel)]="lead.tipocontrato2"
             name="tipocontrato2" #tipocontrato2="ngModel" id="validationProfissao2" [required]="segProp"
@@ -255,25 +229,10 @@
             Obrigatório
           </div>
         </div>
-        <!--             <div class="col-3 col-md-1 mb-3 form-group pl-3">
-              <label for="validationVenc2">Vencimento</label>
-              <input type="number" class="form-control"  [class.ng-touched]="showAlert" id="validationVenc2" name="vencimento2"
-                  [(ngModel)]="lead.vencimento2" #vencimento2="ngModel" [required]="prop" [readonly]="readOnly">
-              <div class="alert alert-danger" *ngIf="!vencimento2.valid && vencimento2.touched">
-                Obrigatório
-              </div>
-            </div>
-            <div class="col-3 col-md-1 mb-3 form-group pl-3">
-              <label for="validationDesde2">Desde</label>
-              <input type="number" class="form-control" [class.ng-touched]="showAlert" id="validationDesde2" name="anoinicio2" 
-              [(ngModel)]="lead.anoinicio2" #anoinicio2="ngModel" placeholder="ano" [required]="prop" [readonly]="readOnly">
-              <div class="alert alert-danger" *ngIf="!anoinicio2.valid && anoinicio2.touched">
-                Obrigatório
-              </div>
-            </div> -->
-      </div>
 
-      <button class="btn btn-outline-primary btn-block" type="submit" [class.btn-outline-danger]="!f.valid">Continuar</button>
+      </div>
+      <button class="btn btn-outline-primary btn-block" type="submit" *ngIf="!f.valid" [class.btn-outline-danger]="!f.valid">Continuar</button>
+      <button class="btn btn-primary btn-block" type="submit" *ngIf="f.valid">Continuar</button>
       <div class="alert alert-danger" *ngIf="!f.valid">
         Por favor preencha todos os campos obrigatorios antes de continuar!
       </div>
