--- a/src/app/form2/form2.component.css
+++ b/src/app/form2/form2.component.css
@@ -4,11 +4,11 @@
     height: 100vh;
 }
 .header{
-    background-image: url("../../assets/img/7452-unsplash.jpg");
+    background-image: url("../../assets/img/credito-habitaçao.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    height: 25vh;
+    height: 35vh;
     color: yellow;
     text-shadow: 1px 1px 1px;
 }
