--- a/src/app/intro/intro.component.css
+++ b/src/app/intro/intro.component.css
@@ -6,7 +6,7 @@
 }
 
 .header{
-    background-image: url("../../assets/img/smartphone_on_hand_3.jpg");
+    background-image: url("../../assets/img/familia2.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
