--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="footer mt-1">
+<div class="container footer pt-3">
   <hr>
   <p>A Gestlifes - Finance Solutions For Your Life, é uma marca regista da Embrace Calculus, Unip. Lda, com o NIF: 513
     476 121
@@ -8,6 +8,7 @@
     nº 0001409 - Seguro de Responsabilidade Civil assegurado pela Hiscox, com a Apólice Nº2510343 válido até 18-06-2020.
     <br />Para mais informações sobre os nossos serviços consulte:
     <a href='https://gestlifes.com/faq'> Gestlifes.com/FAQ</a>
+    </p>
 
     <div class="copyright">
       <p><a href="http://jsalgado.com" target="_blank">Desenvolvido por JSalgado Consultoria 2018</a></p>
