--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,20 +13,24 @@
   <div class="collapse navbar-collapse mt-3" id="navbarNav">
     <ul class="navbar-nav mr-auto" *ngIf="isLoggedIn()">
       <li class="nav-item active">
-        <a class="nav-link small text-uppercase" routerLink="/form" routerLinkActive="active current"><i
-            class="fa fa-briefcase" aria-hidden="true"></i> Processo</a>
+        <a class="nav-link small text-uppercase" routerLink="/form" routerLinkActive="active current">
+          <!-- <i class="fa fa-briefcase" aria-hidden="true"></i>  -->
+          Processo</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link small text-uppercase" routerLink="/docs" routerLinkActive="active current"><i
-            class="fa fa-file" aria-hidden="true"></i> Documentação</a>
+        <a class="nav-link small text-uppercase" routerLink="/docs" routerLinkActive="active current">
+          <!-- <i class="fa fa-file" aria-hidden="true"></i>  -->
+          Documentação</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link small text-uppercase" routerLink="/cc" routerLinkActive="active current"><i class="fa fa-cc"
-            aria-hidden="true"></i> Cartão de Crédito</a>
+        <a class="nav-link small text-uppercase" routerLink="/cc" routerLinkActive="active current">
+          <!-- <i class="fa fa-cc" aria-hidden="true"></i> -->
+           Cartão de Crédito</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link small text-uppercase" routerLink="/faq" routerLinkActive="active current"><i
-            class="fa fa-question" aria-hidden="true"></i> FAQs</a>
+        <a class="nav-link small text-uppercase" routerLink="/faq" routerLinkActive="active current">
+          <!-- <i class="fa fa-question" aria-hidden="true"></i> -->
+           FAQs</a>
       </li>
     </ul>
     <ul class="navbar-nav">
