--- a/src/app/comprovativos/comprovativos.component.html
+++ b/src/app/comprovativos/comprovativos.component.html
@@ -1,3 +1,8 @@
+<div class="header d-flex justify-content-end align-items-center">
+<!--     <div class="text-header mr-5">
+      <h2 class="text-center d-none d-md-flex">Documentação Necessária</h2>
+    </div> -->
+  </div>
 
 <div class="container">
     <h6 class="text-info text-center pt-3">COMPROVATIVOS NECESSÁRIOS</h6>
