--- a/src/app/docs/docs.component.html
+++ b/src/app/docs/docs.component.html
@@ -1,9 +1,10 @@
-<div class="container">
-  <div class="header d-flex justify-content-end align-items-center">
-    <div class="text-header mr-5">
-      <h2 class="text-center d-none d-md-flex">Documentação Necessária</h2>
-    </div>
+<div class="header d-flex justify-content-end align-items-center">
+  <div class="text-header mr-5">
+    <h2 class="text-center d-none d-md-flex">Documentação Necessária</h2>
   </div>
+</div>
+<div class="container">
+
 
   <p class="m-5">Para que o processo possa ser submetido para aprovação é necessária a seguinte
     documentação:</p>
@@ -35,17 +36,15 @@
       </a>
     </div>
     <div class="text-center mt-3">
-      <button class="btn btn-warning" *ngIf="missingDocs"
-        (click)="pausa()">Continuar mais tarde</button>
+      <button class="btn btn-warning" *ngIf="missingDocs" (click)="pausa()">Continuar mais tarde</button>
     </div>
     <div class="text-center mt-3">
-      <button class="btn btn-warning" *ngIf="!missingDocs && showBtnFinalizar"
-        (click)="finalizar()">Finalizar</button>
+      <button class="btn btn-warning" *ngIf="!missingDocs && showBtnFinalizar" (click)="finalizar()">Finalizar</button>
     </div>
     <!-- Documento Extra-->
     <div class="text-center mt-3">
-      <button class="btn btn-warning" *ngIf="!missingDocs && !showBtnFinalizar"
-        (click)="addDocExtra()">Adicionar Documento Extra</button>
+      <button class="btn btn-warning" *ngIf="!missingDocs && !showBtnFinalizar" (click)="addDocExtra()">Adicionar
+        Documento Extra</button>
     </div>
   </div>
 
