--- a/src/app/form2/form2.component.html
+++ b/src/app/form2/form2.component.html
@@ -12,16 +12,42 @@
     <!-- Formulário -->
     <div class="col-12 col-md-10 offset-md-1">
       <form class="form" #f="ngForm" (ngSubmit)="saveCredito(f)">
+        <!-- Valor pretendido -->
         <div class="form-row">
-          <div class="form-group col-12 col-md-2">
-            <label for="inputValorPretendido">Valor <small>*</small></label>
-            <input type="number" class="form-control" [class.ng-touched]="showAlert" id="inputValorPretendido"
-              name="valorpretendido" [(ngModel)]="form2.valorpretendido" #valor="ngModel" required [readonly]="readOnly"
-              autofocus>
+          <div class="form-group col-9 col-md-3">
+            <label for="customRange2">Valor pretendido <small>*</small></label>
+            <input type="range" class="custom-range" min="1000" max="75000" step="100" id="customRange2" name="valorpretendido"
+              [(ngModel)]="form2.valorpretendido" #valor="ngModel" required [disabled]="readOnly">
             <div class="alert alert-danger" *ngIf="!valor.valid && valor.touched && !(valor.value>0)">
               Obrigatório
             </div>
           </div>
+          <div class="form-group col-3 col-md-2">
+            <label for="inputValorPretendido">&nbsp;</label>
+            <input type="number" class="form-control" [class.ng-touched]="showAlert" id="inputValorPretendido"
+              name="valorpretendido" [(ngModel)]="form2.valorpretendido" #valor="ngModel" required [readonly]="readOnly"
+              autofocus>
+          </div>
+
+          <!-- Prazo pretendido -->
+          <div class="form-group col-9 col-md-3">
+            <label for="customRange3">Prazo pretendido <small>*</small></label>
+            <input type="range" class="custom-range" min="12" max="120" id="customRange3" name="prazopretendido"
+              [(ngModel)]="form2.prazopretendido" #valor="ngModel" required [disabled]="readOnly">
+            <div class="alert alert-danger" *ngIf="!prazo.valid && prazo.touched">
+              Obrigatório
+            </div>
+          </div>
+          <div class="form-group col-3 col-md-2">
+            <label for="inputOC">&nbsp;</label>
+            <input type="number" class="form-control" [class.ng-touched]="showAlert" id="inputPrazoPretendido"
+              name="prazopretendido" [(ngModel)]="form2.prazopretendido" #prazo="ngModel" required
+              [readonly]="readOnly">
+            <div class="alert alert-danger" *ngIf="!prazo.valid && prazo.touched">
+              Obrigatório
+            </div>
+          </div>
+          <!-- Tipo de credito -->
           <div class="form-group col-12 col-md-2">
             <label for="inputTipocredito">Tipo Crédito <small>*</small></label>
             <div class="input-group">
@@ -37,19 +63,7 @@
               Obrigatório
             </div>
           </div>
-
-
-          <div class="form-group col-6 col-md-2">
-            <label for="inputOC">Prazo <small>**</small></label>
-            <input type="number" class="form-control" [class.ng-touched]="showAlert" id="inputPrazoPretendido"
-              name="prazopretendido" [(ngModel)]="form2.prazopretendido" #prazo="ngModel" required
-              [readonly]="readOnly">
-            <div class="alert alert-danger" *ngIf="!prazo.valid && prazo.touched">
-              Obrigatório
-            </div>
-          </div>
-
-
+          <!-- finalidade -->
           <div class=" form-group col-12">
             <label for="inputFinalidade">Finalidade</label>
             <input type="text" class="form-control" id="inputFinalidade" name="finalidade"
@@ -62,8 +76,10 @@
               [readonly]="readOnly"></textarea>
           </div>
 
-          <button class="btn btn-outline-danger btn-block mt-3 center" type="button" *ngIf="!f.valid || valor.value <=0">Seguinte</button>
-          <button class="btn btn-primary btn-block mt-3 center" *ngIf="f.valid && valor.value>0" type="submit">Seguinte</button>
+          <button class="btn btn-outline-danger btn-block mt-3 center" type="button"
+            *ngIf="!f.valid || valor.value <=0">Seguinte</button>
+          <button class="btn btn-primary btn-block mt-3 center" *ngIf="f.valid && valor.value>0"
+            type="submit">Seguinte</button>
           <div class="alert alert-danger" *ngIf="!f.valid">
             Por favor preencha todos os campos obrigatorios antes de continuar!
           </div>
@@ -71,8 +87,8 @@
             Por favor preencha o prazo pretendido!
           </div>
           <div class="alert alert-danger" *ngIf="!(valor.value>0) && f.valid">
-              Por favor preencha o valor pretendido!
-            </div>
+            Por favor preencha o valor pretendido!
+          </div>
 
           <div class="small col-12 mt-3">
             <p class="col-12">Os valores do formulário são meramente informativos e servem apenas para indicar os
@@ -87,7 +103,7 @@
   </div>
 
 
-  
+
   <div class="col-12 col-md-10 offset-md-1 mt-3 infoTipoCredito">
     <hr />
     <h5 class="text-center text-info">Informações sobre tipos de Crédito</h5>
@@ -107,7 +123,8 @@
             <p>Tem-se observado um grande aumento na procura do crédito consolidado. Tal como o próprio nome
               indica, este crédito permite
               consolidar o pagamento de todos os seus empréstimos numa só prestação mensal.</p>
-            <p>As vantagens do Crédito consolidado são liquidar todos os seus créditos, e assim conseguir reduzir o valor das suas prestações, e poder adicionar liquidez.</p>
+            <p>As vantagens do Crédito consolidado são liquidar todos os seus créditos, e assim conseguir reduzir o
+              valor das suas prestações, e poder adicionar liquidez.</p>
             <ul>
               <li>Uma única mensalidade</li>
               <li>Taxa fixa</li>
