--- a/src/app/docs/docs.component.html
+++ b/src/app/docs/docs.component.html
@@ -1,12 +1,8 @@
-<div class="header d-flex justify-content-end align-items-center">
-  <div class="text-header mr-5">
-    <h2 class="text-center d-none d-md-flex">Documentação Necessária</h2>
-  </div>
-</div>
+<div class="header d-flex justify-content-end align-items-center"></div>
 <div class="container">
-
-
-  <p class="m-5">Para que o processo possa ser submetido para aprovação é necessária a seguinte
+    <h2 class="d-none d-md-flex justify-content-center mt-3">Documentação Necessária</h2>
+    <h6 class="d-flex d-md-none justify-content-center mt-3">Documentação Necessária</h6>
+  <p class="text-center">Para que o processo possa ser submetido para aprovação é necessária a seguinte
     documentação:</p>
 
   <div class="text-doc">
