--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,17 +1,13 @@
 <div class="header d-flex justify-content-end align-items-center">
-  <div class="text-header mr-5">
-    <h2 class="text-center d-none d-md-flex">Confirme os seus dados</h2>
-    <h6 class="text-center d-flex d-md-none">Confirme os seus dados</h6>
-  </div>
+
 </div>
 <div class="sec1 mt-3">
   <div class="container">
 
-    <div class="row">
-      <div class="col-12 m-3">
-        <p class="d-flex">Verifique os seus dados e preencha os que estiverem em falta. Obrigado! </p>
-      </div>
-    </div>
+    
+        <h2 class="d-none d-md-flex justify-content-center">Confirme os seus dados</h2>
+        <h6 class="d-flex d-md-none justify-content-center">Confirme os seus dados</h6>
+        <p class="d-flex justify-content-center">Verifique os seus dados e preencha os que estiverem em falta. Obrigado! </p>
     <form class="" #f="ngForm" (ngSubmit)="saveFormInfo(f)">
       <div class="form-row">
 
