--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -40,7 +40,7 @@
                     <span class="input-group-text" id="addon-wrapping" (click)="toogleViewPass()"><i class="fa fa-eye"></i></span>
                   </div>
             </div>                
-            <button class="btn btn-outline-success btn-block" type="submit">Login</button>
+            <button class="btn btn-primary btn-block" type="submit">Login</button>
           </div>
         </form>
         
