--- a/src/app/form2/form2.component.html
+++ b/src/app/form2/form2.component.html
@@ -1,6 +1,4 @@
-<div class="header p-5 mb-3">
-
-</div>
+<div class="header p-5 mb-3"></div>
 <div class="container">
   <h2 class="d-none d-md-flex justify-content-center">Crédito Pretendido</h2>
   <h6 class="d-flex d-md-none justify-content-center">Crédito Pretendido</h6>
