--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,57 +1,73 @@
+<div class="header p-5 mb-3"></div>
 <div class="main">
-
-  <div class="header modulos p-3">
+  <div class="modulos p-1">
+    <!-- Dados do processo -->
     <div class="conteudo1">
-        <h4 class="text-center mb-3"><a routerLink="/form" style="color: #000b85; text-decoration: none">DADOS DO SEU PROCESSO</a></h4>
-        <!-- <h6 class="text-dados">Nome: <strong>{{dados.nome}}</strong></h6> -->
-        <h6 class="text-dados">Numero: <strong>{{dados.id}}</strong></h6>
-        <h6 class="text-dados">Estado: 
-          <strong *ngIf="dados.sts==9"> Anulado por Falta de Documentação</strong>
-          <strong *ngIf="dados.sts==38">A Aguardar Documentação</strong>
-          <strong *ngIf="dados.sts==36 || dados.sts==10 || dados.sts==11 || dados.sts==22">Em Analise</strong>
-          <strong *ngIf="dados.sts!=9 && dados.sts!=10 && dados.sts!=11 && dados.sts!=19 && dados.sts!=25 && dados.sts!=23 && dados.sts!=24 
+      <h4 class="d-none d-md-flex justify-content-center">
+        <a routerLink="/form" style="color: #000b85; text-decoration: none">DADOS DO SEU PROCESSO</a>
+      </h4>
+      <h6 class="d-flex d-md-none justify-content-center">
+        <a routerLink="/form" style="color: #000b85; text-decoration: none">DADOS DO SEU PROCESSO</a>
+      </h6>
+      <p class="text-dados">Numero: <strong>{{dados.id}}</strong></p>
+      <p class="text-dados">Estado:
+        <strong *ngIf="dados.sts==9"> Anulado por Falta de Documentação</strong>
+        <strong *ngIf="dados.sts==38">A Aguardar Documentação</strong>
+        <strong *ngIf="dados.sts==36 || dados.sts==10 || dados.sts==11 || dados.sts==22">Em Analise</strong>
+        <strong
+          *ngIf="dados.sts!=9 && dados.sts!=10 && dados.sts!=11 && dados.sts!=19 && dados.sts!=25 && dados.sts!=23 && dados.sts!=24 
             && dados.sts!=22 && dados.sts!=31 && dados.sts!=36 && dados.sts!=37 && dados.sts!=38">{{dados.status}}</strong>
-          <strong *ngIf="dados.sts==19 || dados.sts==25 || dados.sts==31">Recusado</strong>
-          <strong *ngIf="dados.sts==23">Aguarda Comprovativo de Pagamento</strong>
-          <strong *ngIf="dados.sts==24">Financiado</strong>
+        <strong *ngIf="dados.sts==19 || dados.sts==25 || dados.sts==31">Recusado</strong>
+        <strong *ngIf="dados.sts==23">Aguarda Comprovativo de Pagamento</strong>
+        <strong *ngIf="dados.sts==24">Financiado</strong>
 
-        </h6>
-        <div class="text-center p-3" *ngIf="dados.sts==8 || dados.sts==21 || dados.sts==38"><a routerLink="/docs"
-          class="btn btn-primary">Anexar Documentos</a></div>
-        <p *ngIf="dados.sts==4 || dados.sts==5 || dados.sts==14 || dados.sts==15" class="border border-info rounded-lg p-1 small">{{rejeicoes.motivo}}<br/>{{rejeicoes.outro}} </p>
-        <p *ngIf="dados.sts==19 || dados.sts==25 || dados.sts==31" class="border border-info rounded-lg p-1 small">{{rejeicoes.motivo}}<br/>{{rejeicoes.outro}} </p>
-        <p *ngIf="creditos.dtcontratocliente && dados.sts==16" class="border border-info rounded-lg p-1">
-            <small *ngIf="!creditos.dtcontratoparceiro && creditos.dtcontratocliente">O contrato foi-lhe enviado por {{creditos.formaenvio}} em {{creditos.dtcontratocliente}} </small>
-            <small *ngIf="creditos.dtcontratoparceiro">Contrato enviado para o parceiro em {{creditos.dtcontratocliente}} </small>
-        </p>
-        <p *ngIf="dados.sts==23" class="border border-info rounded-lg p-1 small"><a routerLink="/comp">Ver comprovativos necessários</a></p>
-        <h6 class="text-dados">Data da Situação: <strong>{{dados.datastatus}}</strong></h6>
+      </p>
+      <div class="text-center p-3" *ngIf="dados.sts==8 || dados.sts==21 || dados.sts==38">
+        <a routerLink="/docs" class="btn btn-primary">Anexar Documentos</a>
+      </div>
+      <p *ngIf="dados.sts==4 || dados.sts==5 || dados.sts==14 || dados.sts==15"
+        class="border border-info rounded-lg p-1 small">{{rejeicoes.motivo}}<br />{{rejeicoes.outro}} </p>
+      <p *ngIf="dados.sts==19 || dados.sts==25 || dados.sts==31" class="border border-info rounded-lg p-1 small">
+        {{rejeicoes.motivo}}<br />{{rejeicoes.outro}} </p>
+      <p *ngIf="creditos.dtcontratocliente && dados.sts==16" class="border border-info rounded-lg p-1">
+        <small *ngIf="!creditos.dtcontratoparceiro && creditos.dtcontratocliente">O contrato foi-lhe enviado por
+          {{creditos.formaenvio}} em {{creditos.dtcontratocliente}} </small>
+        <small *ngIf="creditos.dtcontratoparceiro">Contrato enviado para o parceiro em {{creditos.dtcontratocliente}}
+        </small>
+      </p>
+      <p *ngIf="dados.sts==23" class="border border-info rounded-lg p-1 small"><a routerLink="/comp">Ver comprovativos
+          necessários</a></p>
+      <p class="text-dados">Data: {{dados.datastatus}}</p>
     </div>
   </div>
 
   <!-- Simulação de Credito-->
-  <div class="simula modulos p-3">
+  <div class="modulos p-1">
     <div class="conteudo1" *ngIf="dados.sts!=16 && dados.sts!=17 && dados.sts!=23 && dados.sts!=24">
-      <h4 class="text-center">
-          <a routerLink="/form2" style="color:white; text-decoration: none">SIMULAÇÃO DO CRÉDITO</a>
+      <h4 class="d-none d-md-flex justify-content-center">
+        <a routerLink="/form2" style="color: #000b85; text-decoration: none">SIMULAÇÃO DO CRÉDITO</a>
       </h4>
-
-      <h6 class="text-center">
+      <h6 class="d-flex d-md-none justify-content-center">
+        <a routerLink="/form2" style="color: #000b85; text-decoration: none">SIMULAÇÃO DO CRÉDITO</a>
+      </h6>
+      <p class="text-center">
         <strong *ngIf="credito.tipocredito==='CP'">Crédito Pessoal</strong>
         <strong *ngIf="credito.tipocredito==='CC'">Crédito Consolidado</strong>
         <strong *ngIf="credito.tipocredito==='AU'">Crédito Automovél</strong>
-      </h6>
+      </p>
 
       <ul class="pt-1" style="list-style: none">
-        <li class="">Valor pretendido: <strong class="pull-right">{{credito.valorpretendido | currency:'€'}}</strong></li>
+        <li class="">Valor pretendido: <strong class="pull-right">{{credito.valorpretendido | currency:'€'}}</strong>
+        </li>
         <li>Prazo: <strong class="pull-right">{{credito.prazopretendido}} Meses</strong></li>
-        <li *ngIf="dados.sts==16 || dados.sts==17 || dados.sts==23 || dados.sts==24">Prestação: <strong class="pull-right">{{credito.prestacaopretendida}} €/Mês</strong></li>
+        <li *ngIf="dados.sts==16 || dados.sts==17 || dados.sts==23 || dados.sts==24">Prestação: <strong
+            class="pull-right">{{credito.prestacaopretendida}} €/Mês</strong></li>
       </ul>
     </div>
-  <!--AProvado ou Financiado-->
+    <!--AProvado ou Financiado-->
     <div class="conteudo1" *ngIf="dados.sts==16 || dados.sts==17 || dados.sts==23 || dados.sts==24">
       <h4 class="text-center">
-          <a routerLink="/form2" style="color:white; text-decoration: none">DADOS DO CRÉDITO</a>
+        <a routerLink="/form2" style="color:white; text-decoration: none">DADOS DO CRÉDITO</a>
       </h4>
 
       <h6 class="text-center">
@@ -68,20 +84,30 @@
     </div>
   </div>
 
-  <!-- Responsaveis  pelo processo-->
-  <div class="repons modulos p-3 text-dados">
-    <div class="conteudo1">
-      <h4 class="text-center mb-3">RESPONSAVEIS PELO PROCESSO</h4>
-      <h6>Gestor: <strong>{{responsavel.gestor}} | <span class="fa fa-phone"><span
-              class="tel"><strong> {{responsavel.telefone}}</strong></span> </span></strong></h6>
-      <h6><strong> {{responsavel.email}}</strong></h6>
-      <h6 *ngIf="responsavel.analista">Analista: <strong>{{responsavel.analista}}</strong>
-                  | <span class="fa fa-phone"><span
-                    class="tel"> {{responsavel.telefoneAnalista}}</span> </span>
-                </h6>
+    <!-- Responsaveis  pelo processo-->
+    <div class="modulos p-1">
+        <div class="conteudo1">
+          <h4 class="d-none d-md-flex justify-content-center"  style="color: #000b85;">
+            RESPONSAVEIS
+          </h4>
+          <h6 class="d-flex d-md-none justify-content-center"  style="color: #000b85;">
+            RESPONSAVEIS
+          </h6>
+          <p class="text-center"> Gestor: <strong>{{responsavel.gestor}} | 
+                <span class="fa fa-phone"><span class="tel"><strong>
+                  {{responsavel.telefone}}</strong></span> </span></strong></p>
+        <p class="text-center"><strong> {{responsavel.email}}</strong></p>
+        <p *ngIf="responsavel.analista">Analista: <strong>{{responsavel.analista}}</strong>
+          | <span class="fa fa-phone"><span class="tel"> {{responsavel.telefoneAnalista}}</span> </span>
+        </p>
+  
+        <p class=" text-center p-5"><span style="color: black;font-weight: 600">Poderá entrar em contacto com a Gestlifes através do
+            nosso numero geral:<span class="phone"> (+351) 220
+              931 950</span> no horario 9:30h ás 19:00h.</span>
+        </p>
+        </div>
+       </div>
+  
 
-      <p class="pt-5"><span style="color: black;font-weight: 600">Poderá entrar em contacto com a Gestlifes através do nosso numero geral:<span class="phone"> (+351) 220
-            931 950</span> no horario 9:30h ás 19:00h.</span></p>
-    </div>
-  </div>
+
 </div>
